# uccineering

./: .gitignore  .travis.yml  .zshhist  CMakeLists.txt  README.md  TODO.txt  sample_main.cpp
src/: .Timer.h.swo  .zshhist  AlphaBeta.h  Evaluators.h  Location.h  Moderator.cpp  Moderator.h  Node.cpp  Node.h  Searcher.cpp  Searcher.h  Timer.cpp  Timer.h  TranspositionTable.cpp  TranspositionTable.h  time_test  uccineers.cpp  ucineers.cpp
src/common/: BoardGameState.h  DomineeringState.h  GamePlayer.cpp  GamePlayer.h  GameState.cpp  GameStateFactory.cpp  Network.cpp  RandomDomineeringPlayer.h
